--- a/sharepoint_sentiment/SentimentAnalysis/packages.config
+++ b/sharepoint_sentiment/SentimentAnalysis/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.8523.1200" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
 </packages>
