--- a/sharepoint_sentiment/SentimentAnalysis/SentimentAnalysis.csproj
+++ b/sharepoint_sentiment/SentimentAnalysis/SentimentAnalysis.csproj
@@ -106,6 +106,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CognitiveServicesClient\CognitiveServicesClient.csproj">
+      <Project>{cb12555e-a3f2-4ef4-a046-28def4411398}</Project>
+      <Name>CognitiveServicesClient</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SharePointClient\SharePointClient.csproj">
       <Project>{27cc896d-3345-4318-b2fb-a9be330a0af1}</Project>
       <Name>SharePointClient</Name>
